samples/_failures_safe/1761654335_42f38a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67a28224.c: In function ‘main’:
./samples/SAFE/__tmp_67a28224.c:174:5: error: expected declaration or statement at end of input
  174 |     printf("4. Huffman\n");
      |     ^~~~~~
